No se habia guardado toda los cambios, ya se habilita autosaved

--- a/pueblos/pueblo.html
+++ b/pueblos/pueblo.html
@@ -357,6 +357,6 @@
     <script src="js/audio.js" type="module"></script>
     <script src="js/pueblo.js" type="module"></script>
     <script src="js/app.js" type="module"></script>
-    <script src="/api/url.js" type="module"></script>
+    <script src="api/url.js" type="module"></script>
 </body>
 </html>
