Se ponen rutas desde Raiz en comercioPueblos

--- a/pueblos/comercioPueblos.html
+++ b/pueblos/comercioPueblos.html
@@ -89,7 +89,7 @@
       for more information.
       -->
       
-      <script type="module" src="js/comercioPueblos.js"></script>  
-      <script src="dbSitiosPueblos.js"></script>
+      <script type="module" src="/pueblos/js/comercioPueblos.js"></script>  
+      <script src="/pueblos/dbSitiosPueblos.js"></script>
   </body>
 </html>
