Se corre el tipo module en comercio

--- a/pueblos/comercioPueblos.html
+++ b/pueblos/comercioPueblos.html
@@ -89,7 +89,8 @@
       for more information.
       -->
       
-      <script type="module" src="/pueblos/js/comercioPueblos.js"></script>  
+
+      <script  src="/pueblos/js/comercioPueblos.js" type="module"></script>
       <script src="/pueblos/dbSitiosPueblos.js"></script>
   </body>
 </html>
